--- a/package.json
+++ b/package.json
@@ -10,15 +10,21 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~44.0.0",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/stack": "^6.2.1",
+    "expo": "^44.0.6",
+    "expo-font": "^10.0.5",
     "expo-status-bar": "~1.2.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "expo-updates": "^0.11.6",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-native": "^0.68.1",
+    "react-native-gesture-handler": "^2.4.1",
+    "react-native-safe-area-context": "^4.2.5",
+    "react-native-web": "^0.17.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.17.10"
   },
   "private": true
 }
